2015-02-23 Riccardo Mottola <rm@gnu.org>

	* Output/GNUstepOutput/Controllers/Preferences/BundlePreferencesController.m
	Do not set description if nil.

	* Output/GNUstepOutput/Controllers/ContentControllers/StandardContentController.m
	Create AttStr directly.

	* InFilters/DCCSupport/DCCSupport.m
	* InFilters/DCCSupport/DCCSupport.h
	Explicit parameter type.

2015-02-22 Riccardo Mottola <rm@gnu.org>

	* Output/GNUstepOutput/English.lproj/GeneralPreferences.gorm
	Fields send action ond editing end, resize heights to standard.

2015-02-21 Riccardo Mottola <rm@gnu.org>

	* InFilters/DCCSupport/DCCGetter.m
	* InFilters/DCCSupport/DCCObject.m
	* InFilters/DCCSupport/DCCSender.m
	* InFilters/DCCSupport/DCCSupport.m
	* InFilters/DCCSupport/DCCSupportPreferencesController.m
	Replaced GS macros

2015-02-20 Riccardo Mottola <rm@gnu.org>

	* Input/NetclassesInput/main.m
	* Input/NetclassesInput/main.h
	Explicit return types

	* Input/NetclassesInput/main.m
	Fix memory leak

	* Output/GNUstepOutput/Models/Channel.m
	Allocate mutable string directly for line terminator.


2015-02-19 Riccardo Mottola <rm@gnu.org>

	* Output/GNUstepOutput/Tools/dns_helper.m
	Remove unused header, remove GS memory macros.

	* Output/GNUstepOutput/Misc/HelperExecutor.m
	Handle executable placement on Mac.

2015-02-19 Riccardo Mottola <rm@gnu.org>

	* Input/NetclassesInput/main.m
	Fix memory leak.

	* Output/GNUstepOutput/GNUstepOutput.m
	Remove unused variables and code setting them.

2015-02-17 Riccardo Mottola <rm@gnu.org>

	* Output/GNUstepOutput/Models/Channel.m
	* Output/GNUstepOutput/Controllers/ContentControllers/StandardContentController.m
	* Output/GNUstepOutput/Controllers/Preferences/PreferencesController.m
	* Output/GNUstepOutput/Controllers/ConnectionController/ConnectionControllerInFilter.m
	* Output/GNUstepOutput/Misc/NSAttributedStringAdditions.m
	* Output/GNUstepOutput/Misc/LookedUpHost.m
	Explicit types and protocols.

2015-02-16 Riccardo Mottola <rm@gnu.org>
